# aindy-apps-monolith

./: .env.example  .gitattributes  .gitignore  APPS_SIGNOFF.md  CHANGELOG.md  CLAUDE.md  Dockerfile  HANDOFF-runtime-nodus-resume-pipeline-context-bug.md  LIVE_VERIFICATION_SCOPE.md  README.md  TECH_DEBT.md  alembic.ini  docker-compose.mongo.yml  docker-compose.prod.yml  docker-compose.test.yml  pyproject.toml  pytest.ini  pytest.integration.ini  pytest.nodus.ini  pytest.postgres.ini  ruff.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  SECRETS.md
apps/: bootstrap.py
client/: eslint.config.js  package-lock.json  package.json  vite.config.ts
docker/: entrypoint.sh  init-pgvector.sql
docs/: GOVERNANCE_INDEX.md
scratchpad/: agent_shapes.sh  api_sweep.py  audit_client_routes.mjs  catch_recreator.sh  check_memory_owner.sh  check_memory_scope.sh  check_social_state.sh  check_users.sh  clean_restart.sh  cleanup_test_accounts.sh  confirm_httpexc_bug.sh  diagnose_agent_run.sh  diagnose_crash.sh  diagnose_login.sh  diagnose_research.sh  dump_agent_run.sh  dump_dashboard_payloads.sh  final_check.sh  final_rid.txt  find_client_errors.sh  find_client_errors2.sh  find_restarter.sh  fix_portfwd.sh  frontend_access.sh  full_diag.sh  inspect_login.sh  memtxn_introspect.sh  memtxn_probe.sh  memtxn_readpath_check.sh  memtxn_recall_check.sh  memtxn_recall_direct.sh  memtxn_repro.sh  memtxn_snapshot.sh  memtxn_verify_1102.sh  port_consistency.sh  preview_test_accounts.sh  rebuild_1102.sh  rebuild_social.sh  research_500.sh  reset_password.sh  (+28 more)
scripts/: check_api_contracts.py  (+22 more)
(+412 files in other folders)
